--- a/polylineViewer.html
+++ b/polylineViewer.html
@@ -24,27 +24,26 @@
     <script src="./PolylineViewer.js"></script>
   </head>
   <body>
-    <div class="title">Route map</div>
-
     <div class="container-fluid">
       <!-- Interactive UI -->
       <div id="selected_marks">
-        <h4>
-          Marks for <span class="sheet_name" id="selected_marks_title"></span>
+        <span>
+          Route display for <span class="sheet_name" id="selected_marks_title" style=""
+          ></span>
           <button title="Select Sheet" type="button" class="btn btn-link" id="show_choose_sheet_button">
             <span class="glyphicon glyphicon-cog" aria-hidden="true">Select Sheet</span>
           </button>
-        </h4>
-        <div id="data_table_wrapper"></div>
+          <span id="chosen_sheet_name"></span>
+        </span>
       </div>
     </div>
 
-    <div id="choose_sheet_dialog" class="modal fade" role="dialog">
+    <div id="choose_sheet_dialog" class="modal fade" role="dialog" style="visibility: collapse" >
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" id="close_choose_sheet" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Choose a Sheet from <span class="sheet_name" id="choose_sheet_title"></span></h4>
+            <button type="button" id="close_choose_sheet" class="close" data-dismiss="modal">>&times;</button>
+            <span class="modal-title">Choose a Sheet from <span class="sheet_name" id="choose_sheet_title"></span>
           </div>
           <div class="modal-body">
             <div id="choose_sheet_buttons"></div>
@@ -54,7 +53,7 @@
     </div>
 
 
-    <div id="map" style="width: 90%; height: 90%; min-height: 250px; position: absolute"></div>
+    <div id="map" style="width: 98%; height: 93%; min-height: 250px; max-height: 100%; max-width: 100%; position: absolute"></div>
     <div class="credits">
       <!-- normally this should be on the tiles, including as backup -->
       Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.
