--- a/polylineViewer.html
+++ b/polylineViewer.html
@@ -21,7 +21,7 @@
     <script src="/lib/tableau-extensions-1.latest.js"></script>
 
     <!-- Our extension's code -->
-    <script src="https://rawgit.com/jacalata/PolylineViewer/master/PolylineViewer.js"></script>
+    <script src="https://jacalata.nfshost.com/PolylineViewer/PolylineViewer.js"></script>
   </head>
   <body>
     <div class="container-fluid">
