fix trex url and change all back to github

--- a/polylineViewer.html
+++ b/polylineViewer.html
@@ -18,10 +18,10 @@
     <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
 
     <!-- Include the Tableau Extensions library so we can communicate with Tableau -->
-    <script src="/lib/tableau-extensions-1.latest.js"></script>
+    <script src="./lib/tableau-extensions-1.latest.js"></script>
 
     <!-- Our extension's code -->
-    <script src="https://jacalata.nfshost.com/PolylineViewer/PolylineViewer.js"></script>
+    <script src="./PolylineViewer.js"></script>
   </head>
   <body>
     <div class="container-fluid">
