https self-hosting

--- a/polylineViewer.html
+++ b/polylineViewer.html
@@ -10,12 +10,12 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-    <!-- Leaflet -->
-    <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
+    <!-- Leaflet (files from http://cdn.leafletjs.com/, need to be on https) -->
+    <script src="./lib/leaflet-0.7/leaflet.js"></script>
+    <link rel="stylesheet" href="./lib/leaflet-0.7/leaflet.css" />
     <script type="text/javascript" src="https://rawgit.com/jieter/Leaflet.encoded/master/Polyline.encoded.js"></script>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
-    <!-- Stamen map tiles -->
-    <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
+    <!-- Stamen map tiles from http://maps.stamen.com/js/ (must be hosted with https) -->
+    <script type="text/javascript" src="./lib/tile.stamen.v1.3.0.js"></script>
 
     <!-- Include the Tableau Extensions library so we can communicate with Tableau -->
     <script src="./lib/tableau-extensions-1.latest.js"></script>
