update leaflet to add tooltips, clear lines on deselect

--- a/PolylineViewer.html
+++ b/PolylineViewer.html
@@ -10,12 +10,12 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-    <!-- Leaflet (files from http://cdn.leafletjs.com/, need to be on https) -->
-    <script src="./lib/leaflet-0.7/leaflet.js"></script>
-    <link rel="stylesheet" href="./lib/leaflet-0.7/leaflet.css" />
-    <script type="text/javascript" src="https://rawgit.com/jieter/Leaflet.encoded/master/Polyline.encoded.js"></script>
     <!-- Stamen map tiles from http://maps.stamen.com/js/ (must be hosted with https) -->
     <script type="text/javascript" src="./lib/tile.stamen.v1.3.0.js"></script>
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/jieter/Leaflet.encoded/master/Polyline.encoded.js"></script>
 
     <!-- Include the Tableau Extensions library so we can communicate with Tableau -->
     <script src="./lib/tableau-extensions-1.latest.js"></script>
