properly clear the map on selection changes

--- a/PolylineViewer.html
+++ b/PolylineViewer.html
@@ -27,14 +27,10 @@
     <div class="container-fluid">
       <!-- Interactive UI -->
       <div id="selected_marks">
-        <span>
-          Route display for <span class="sheet_name" id="selected_marks_title" style=""
-          ></span>
-          <button title="Select Sheet" type="button" class="btn btn-link" id="show_choose_sheet_button">
-            <span class="glyphicon glyphicon-cog" aria-hidden="true">Select Sheet</span>
-          </button>
-          <span id="chosen_sheet_name"></span>
-        </span>
+        <div>Route display for <span class="chosen_sheet_name" id="selected_marks_title"></div>
+        <button title="Select Sheet" type="button" class="btn btn-link" id="show_choose_sheet_button">
+          <span class="glyphicon glyphicon-cog" aria-hidden="true">Select Sheet</span>
+        </button>
       </div>
     </div>
 
