--- a/PolylineViewer.html
+++ b/PolylineViewer.html
@@ -38,7 +38,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" id="close_choose_sheet" class="close" data-dismiss="modal">>&times;</button>
+            <button type="button" id="close_choose_sheet" class="close" data-dismiss="modal">&times;</button>
             <span class="modal-title">Choose a Sheet from <span class="sheet_name" id="choose_sheet_title"></span>
           </div>
           <div class="modal-body">
